# eau_grand_lyon_component

./: .gitignore  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml  tests.yaml
custom_components/: README.md
custom_components/eau_grand_lyon/: README.md  __init__.py  api.py  binary_sensor.py  button.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  notify.py  repairs.py  sensor.py  strings.json  switch.py
custom_components/eau_grand_lyon/api/: methods.py
custom_components/eau_grand_lyon/sensors/: __init__.py  base.py  consumption.py  contract.py  cost.py  experimental.py  global_sensors.py  intelligence.py  quality.py
custom_components/eau_grand_lyon/translations/: en.json  fr.json
docs/: NOTIFICATIONS.md
lovelace/: dashboard.yaml  dashboard_notifications.yaml  energy_config.yaml  notification_config.yaml  smart_notifications.yaml
tests/: benchmarks.py  conftest.py  test_api.py  test_concurrency.py  test_config_flow.py  test_coordinator.py  test_coordinator_helpers.py  test_coordinator_methods.py  test_sensor.py  test_sensors_cost.py  test_sensors_intelligence.py
