[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eau-grand-lyon"
version = "2.9.0"
description = "Home Assistant custom integration for Eau du Grand Lyon water utility"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Morgeek", email = "morgan.front@gmail.com"}
]
keywords = ["home-assistant", "water", "eau", "grand-lyon", "utility", "consumption"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: French",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

[project.urls]
Homepage = "https://github.com/morgeek/HA-Plugin-pour-Eau-du-Grand-Lyon"
Issues = "https://github.com/morgeek/HA-Plugin-pour-Eau-du-Grand-Lyon/issues"
Repository = "https://github.com/morgeek/HA-Plugin-pour-Eau-du-Grand-Lyon"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "async-lru>=1.0",
    "aiohttp>=3.8",
    "voluptuous>=0.13",
]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "isort>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
py_version = 39

[tool.coverage.run]
branch = true
source = ["custom_components/eau_grand_lyon"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
